Finally solves the issue of the scrollbar at the bottom of the page

--- a/src/styles/EventDetail.sass
+++ b/src/styles/EventDetail.sass
@@ -1,3 +1,6 @@
+.row
+  margin: 0
+
 .event-detail
   .event-photo
     width: 100%
